# mmft-droplet-simulator

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  myCmake.sh  myEmcc.sh  myMake.sh
doc/: Doxyfile.in  DoxygenMainPage.md
include/droplet-simulator/: Results.h  Simulator.h
javascript/: main.js
src/: CMakeLists.txt  Results.cpp  Simulator.cpp  SimulatorImpl.h  main.cpp
src/architecture/: CMakeLists.txt  Channel.cpp  Channel.h  ChannelPosition.cpp  ChannelPosition.h  Chip.cpp  Chip.h  Edge.cpp  Edge.h  FlowRatePump.cpp  FlowRatePump.h  Node.cpp  Node.h  PressurePump.cpp  PressurePump.h
src/nodalAnalysis/: CMakeLists.txt  IEdge.h  IFlowRatePump.h  INode.h  IPressurePump.h  IResistance.h  NodalAnalysis.cpp  NodalAnalysis.h
src/simulation/: CMakeLists.txt  Droplet.cpp  Droplet.h  DropletBoundary.cpp  DropletBoundary.h  Fluid.cpp  Fluid.h  IResistanceModel.h  Injection.cpp  Injection.h  ResistanceModels.cpp  ResistanceModels.h  Simulation.cpp  Simulation.h
src/simulation/events/: BoundaryHeadEvent.cpp  BoundaryHeadEvent.h  BoundaryTailEvent.cpp  BoundaryTailEvent.h  CMakeLists.txt  Event.h  InjectionEvent.cpp  InjectionEvent.h  MergeBifurcationEvent.cpp  MergeBifurcationEvent.h  MergeChannelEvent.cpp  MergeChannelEvent.h  TimeStepEvent.cpp  TimeStepEvent.h
tests/: CMakeLists.txt
tests/architecture/: Architecture.test.cpp  CMakeLists.txt
tests/nodalAnalysis/: CMakeLists.txt  NodalAnalysis.test.cpp
tests/simulation/: CMakeLists.txt  Results.tests.cpp
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: Interfaces.ts  droplet.d.ts  main.ts
webassembly/: droplet.js  droplet.wasm
